; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_postmaster.c_MaybeStartWalReceiver.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_postmaster.c_MaybeStartWalReceiver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WalReceiverPID = common dso_local global i64 0, align 8
@pmState = common dso_local global i64 0, align 8
@PM_STARTUP = common dso_local global i64 0, align 8
@PM_RECOVERY = common dso_local global i64 0, align 8
@PM_HOT_STANDBY = common dso_local global i64 0, align 8
@PM_WAIT_READONLY = common dso_local global i64 0, align 8
@Shutdown = common dso_local global i64 0, align 8
@NoShutdown = common dso_local global i64 0, align 8
@WalReceiverRequested = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @MaybeStartWalReceiver to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @MaybeStartWalReceiver() #0 {
  %1 = load i64, i64* @WalReceiverPID, align 8
  %2 = icmp eq i64 %1, 0
  br i1 %2, label %3, label %29

3:                                                ; preds = %0
  %4 = load i64, i64* @pmState, align 8
  %5 = load i64, i64* @PM_STARTUP, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %19, label %7

7:                                                ; preds = %3
  %8 = load i64, i64* @pmState, align 8
  %9 = load i64, i64* @PM_RECOVERY, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %19, label %11

11:                                               ; preds = %7
  %12 = load i64, i64* @pmState, align 8
  %13 = load i64, i64* @PM_HOT_STANDBY, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %19, label %15

15:                                               ; preds = %11
  %16 = load i64, i64* @pmState, align 8
  %17 = load i64, i64* @PM_WAIT_READONLY, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %29

19:                                               ; preds = %15, %11, %7, %3
  %20 = load i64, i64* @Shutdown, align 8
  %21 = load i64, i64* @NoShutdown, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %29

23:                                               ; preds = %19
  %24 = call i64 (...) @StartWalReceiver()
  store i64 %24, i64* @WalReceiverPID, align 8
  %25 = load i64, i64* @WalReceiverPID, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %23
  store i32 0, i32* @WalReceiverRequested, align 4
  br label %28

28:                                               ; preds = %27, %23
  br label %29

29:                                               ; preds = %28, %19, %15, %0
  ret void
}

declare dso_local i64 @StartWalReceiver(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
